# StinaConfig

./: .gitignore  CMakeLists.txt  build.sh  readme.md  run.sh
stina-parser/: CMakeLists.txt
stina-parser/include/: stina.hpp
stina-parser/src/: stina.cpp  tokenizer.cpp
test/: CMakeLists.txt
test/src/: main.cpp
